service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-custom-service
spec:
  selector:
    app: nginx-custom
  ports:
    - port: 80
      targetPort: 80
